--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "next": "latest"
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
+    "@types/node": "20.8.0",
+    "@types/react": "18.2.24",
     "eslint": "latest",
     "eslint-config-next": "latest"
   }
