--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,3 @@
-# NEXT_PUBLIC_BASE_SERVER_PATH = "http://localhost:5005/api/"
+NEXT_PUBLIC_BASE_SERVER_PATH = "http://localhost:5005/api/"
 
-NEXT_PUBLIC_BASE_SERVER_PATH = "http://37.46.132.158:5005/api/"
+# NEXT_PUBLIC_BASE_SERVER_PATH = "http://37.46.132.158:5005/api/"
