--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,3 @@
 # NEXT_PUBLIC_BASE_SERVER_PATH = "http://localhost:5005/api/"
 
-NEXT_PUBLIC_BASE_SERVER_PATH = "http://91.107.125.19:5005/api/"
+NEXT_PUBLIC_BASE_SERVER_PATH = "https://poisk-it-easy.ru:5005/api/"
