--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,3 @@
 # NEXT_PUBLIC_BASE_SERVER_PATH = "http://localhost:5005/api/"
 
-NEXT_PUBLIC_BASE_SERVER_PATH = "http://poisk-for-each.ru:5005/api/"
+NEXT_PUBLIC_BASE_SERVER_PATH = "http://185.250.46.82:5005/api/"
