--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,9 @@
 # NEXT_PUBLIC_BASE_SERVER_PATH = "http://localhost:5005/api/"
 
 NEXT_PUBLIC_BASE_SERVER_PATH = "https://poisk-it-easy.ru:8443/api/"
+
+NEXT_PUBLIC_MERCHANT_ID = "b98bf9df-b4a8-48cf-8454-0c4ed33d8146"
+
+NEXT_PUBLIC_SECRET_1 = "915365719a13f73558fb21855a5c6ec6"
+
+NEXT_PUBLIC_SECRET_2 = "89f95e30f09b8aae923ff3ae6c56449c"
