--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 # NEXT_PUBLIC_BASE_SERVER_PATH = "http://localhost:5005/api/"
 
-NEXT_PUBLIC_BASE_SERVER_PATH = "https://poisk-it-easy.ru:8443/api/"
+NEXT_PUBLIC_BASE_SERVER_PATH = "https://bagilubixam059ye.ru:8443/api/"
 
 NEXT_PUBLIC_MERCHANT_ID = "b98bf9df-b4a8-48cf-8454-0c4ed33d8146"
 
